--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="home-header">
             <h1 class="home-text">Visit Taniti</h1>
             <div id="header-links-container">
-                <a href="home.html"><u>Home</u></a>
+                <a href="index.html"><u>Home</u></a>
                 <a href="stay.html">Stay</a>
                 <a href="getaround.html">Get Around</a>
                 <a href="dine.html">Dine</a>
